examples/invalid/semantics/redeclare_same_scope.aru
module examples.invalid.semantics.redeclareSameScope

func main() {
    let count = 1

    // expected: semantic error; `count` is already declared in this scope.
    let count = 2
}